--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="manifest" href="manifest.json">
-    <title>EP VIP</title>
+    <title>Enjoy Pinellas</title>
     <style>
         body { 
             background: #001f3f; 
