--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <img src="icon.png" class="app-logo" alt="EP VIP">
     <h2>Welcome to VIP</h2>
 
-    <a href="fb://group/?id=1016237428504634" class="btn-open">ENTER SECTION</a>
+    <a href="fb://group/?id=1016237428504634" class="btn-open">CLICK HERE</a>
 
     <script>
         const appLink = "fb://group/?id=1016237428504634";
