--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 
     <img src="icon.png" class="app-logo" alt="EP VIP">
-    <h2>Welcome to VIP</h2>
+    <h2>Join the fun!</h2>
 
     <a href="fb://group/?id=1016237428504634" class="btn-open">CLICK HERE</a>
 
